--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Ari Mewosiku <meowiik at gmail dot com>
+# Maintainer: Mewosiku <meowiik at gmail dot com>
 pkgname=environment-overseer-git
-pkgver=0.9
+pkgver=r59.7c2a2a5
 pkgrel=1
-pkgdesc="Real time environment manager, used primarily to supress adictive sites"
+pkgdesc="Real time environment manager, used primarily to suppress addictive sites"
 arch=('any')
 url="https://gitlab.com/meowxiik/environment-overseer"
 license=('GPL')
@@ -11,27 +11,14 @@ source=("$pkgname::git+https://gitlab.com/meowxiik/environment-overseer.git/")
 md5sums=('SKIP')
 validpgpkeys=()
 
-#prepare() {
-	echo prepare
-#	cd "$pkgname-$pkgver"
-#	patch -p1 -i "$srcdir/$pkgname-$pkgver.patch"
-#}
-
-#build() {
-	echo build
-#	cd "$pkgname-$pkgver"
-#	./configure --prefix=/usr
-#	make
-#}
-
-#check() {
-#	echo check
-#	cd "$pkgname-$pkgver"
-#	make -k check
-#}
+pkgver() {
+  cd "$pkgname"
+  printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+}
 
 package() {
 	echo package
-#	cd "$pkgname-$pkgver"
-#	make DESTDIR="$pkgdir/" install
+	
+	install -Dm 755 ${srcdir}/${pkgname}/src/* --target-directory "${pkgdir}/usr/bin/"
+	install -Dm 644 ${srcdir}/${pkgname}/systemd/* --target-directory "${pkgdir}/usr/lib/systemd/system"
 }
