Fixed systemd units

--- a/systemd/overseer-api.service
+++ b/systemd/overseer-api.service
@@ -2,7 +2,7 @@
 Description=Environment Overseer Daemon
 
 [Service]
-ExecStart=overseer
+ExecStart=overseer-rest-api.py
 
 [Install]
 WantedBy=multi-user.target
