--- a/systemd/overseer.service
+++ b/systemd/overseer.service
@@ -2,7 +2,7 @@
 Description=Environment Overseer Daemon
 
 [Service]
-ExecStart=overseer
+ExecStart=overseer.py
 
 [Install]
 WantedBy=multi-user.target
