--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,10 @@ jobs:
     steps:
       - checkout
       - run:
+          command: sudo pip install psutil
+      - run:
           command: |
-            python test/overseer-test.py
+            python src/overseer-test.py
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test-results
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
