--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
                 build:
                         context: .
                         dockerfile: test/Dockerfile
-                entrypoint: /bin/sh
+                command: /app/test/routine.sh
+                #command: /bin/sh
                 tty: true
                 stdin_open: true
                 volumes:
