overhaul: added new tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+# More docs at https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
+
 [metadata]
 name = overseer-meowxiik
 version = 1.1.0
@@ -15,10 +17,13 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    psutil
+
 
 [options.packages.find]
 where = src
 
 [options.entry_points]
 console_scripts =
-    jcompose = just_compose:main.entrypoint
+    overseer = overseer:main.main
